With car search code commit

--- a/src/main/resources/global.properties
+++ b/src/main/resources/global.properties
@@ -1,9 +1,13 @@
 #Environment
-env = prod
+# prod, stage, test, dev, other
+# The default value  = localhost
+
+env = other
 
 #Environemnt URLS
 produrl = https://www.tvnz.co.nz
 stageurl = https://stage.tvnz-stage.co.nz/
 testurl =
-devurl =
+devurl = 
+otherurl = https://www.goseetravel.com/
 localhost = "http://localhost/"
