With car search code commit

--- a/src/main/resources/global.properties
+++ b/src/main/resources/global.properties
@@ -10,4 +10,5 @@ stageurl = https://stage.tvnz-stage.co.nz/
 testurl =
 devurl = 
 otherurl = https://www.goseetravel.com/
+"otherurl = https://demo.guru99.com/test/newtours/
 localhost = "http://localhost/"
