Page object modeling

--- a/src/main/resources/global.properties
+++ b/src/main/resources/global.properties
@@ -9,6 +9,7 @@ produrl = https://www.tvnz.co.nz
 stageurl = https://stage.tvnz-stage.co.nz/
 testurl =
 devurl = 
-otherurl = https://www.goseetravel.com/
-"otherurl = https://demo.guru99.com/test/newtours/
+# otherurl = https://www.goseetravel.com/
+# otherurl = https://demo.guru99.com/test/newtours/
+otherurl = https://www.1news.co.nz/
 localhost = "http://localhost/"
